--- a/squares-html5.html
+++ b/squares-html5.html
@@ -1,4 +1,113 @@
-﻿<!doctype html>
+<!--
+<!doctype html>
+<html ng-app lang="en">
+    <head>
+        <title>Squares for sale</title>
+        <!-- meta details go here -->
+        <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+	    <meta property="og:title" content="A Basic HTML5 Template">
+        <meta property="og:type" content="website">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+        <meta property="og:image" content="image.png">
+        <meta name="keywords" content="HTML5, Node.js, Jquery">
+        <meta name="author" content="Orris Baker">
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+		<link rel="stylesheet" type="text/css" href="squares-html5.css">
+		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		
+		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
+		<!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+	    <!--Add conditional Javascript-->
+        <!-- Favicon-->	            
+        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+	    <link rel="author" type="text/html" href="https://orris0.github.io/">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->                      
+	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+		    <script src="html5.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <div id="container">
+            <header>
+                <h1>Square Deals</h1>
+                <div id="white"></div>
+                <div id="red"></div>
+                <div id="yellow"></div>
+            </header><br>
+            <div id="mainpanel"><br>
+            <nav>
+                <ul>
+                    <li><a href="square-deals-about.html" title="Square Deals, About Us">About Us</a></li>
+                    <li><a href="square-deals-colours.html" title="Squares, range of colours">Colours</a></li>
+                    <li><a href="square-deals-contact.html" title="Square Deals, brochure">Brochure</a></li>
+                    <li><a href="square-deals-contact.html" title="Square Deals, Contact Us">Contact us</a></li>
+                    <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                </ul><br>
+            </nav>
+            <h2>Leaders in the creation of squares</h2>
+            <div id="midpanel">
+                <div id="midleft"><br>
+                    <ul>
+                        <li>A wide range of squares in many colours always in stock</li>
+                        <li>Our computerised machines produce squares fast, this ensures prompt delivery at reasonable prices</li>
+                        <li>Try our square design service</li>
+                    </ul>
+                </div>
+                <div id="midright" class="cntr">
+                    <span class="small"><br></span>
+                    <img alt="Our machines" title="Our machines" height="193" src="images/machines.jpg" width="349">
+                    <div class="cntr">
+                        <span class="tiny">Copyright © Square Deals</span>
+                    </div>
+                </div>
+                <br class="clear"/>
+                </div>
+            </div>
+            <footer>
+                Footer goes here
+            </footer>
+        </div>
+    </body>
+</html
+
+-->
+
+<!doctype html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
 <!-- Anything you write under head is not displayed on the browser content page. -->
