--- a/starter-page.html
+++ b/starter-page.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app lang="en">
     <head>
-        <title>Page with transparency and gradient background.</title>
+        <title>Page with transparency and gradient background</title>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -103,7 +103,7 @@
                     <h2 class="heading">Follow Us</h2>
                 </div>
             </div>
-            <div class="row" style="background-color: 66d4ff">
+            <div class="row" style="background-color: #66d4ff">
                 <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
                     <div class="form-group">
                         <input class="form-control" type="email" name="subscribe_email"
