--- a/squares-html5.html
+++ b/squares-html5.html
@@ -15,7 +15,7 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-		<link rel="stylesheet" type="text/css" href="squares-html5.css">
+		<link rel="stylesheet" type="text/css" href="CSS/squares-html5.css">
 		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
@@ -70,34 +70,34 @@
                 <div id="yellow"></div>
             </header><br>
             <div id="mainpanel"><br>
-            <nav>
-                <ul>
-                    <li><a href="square-deals-about.html" title="Square Deals, About Us">About Us</a></li>
-                    <li><a href="square-deals-colours.html" title="Squares, range of colours">Colours</a></li>
-                    <li><a href="square-deals-contact.html" title="Square Deals, brochure">Brochure</a></li>
-                    <li><a href="square-deals-contact.html" title="Square Deals, Contact Us">Contact us</a></li>
-                    <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                </ul><br>
-            </nav>
-            <h2>Leaders in the creation of squares</h2>
-            <div id="midpanel">
-                <div id="midleft"><br>
+                <nav>
                     <ul>
+                        <li><a href="square-deals-about.html" title="Square Deals, About Us">About Us</a></li>
+                        <li><a href="square-deals-colours.html" title="Squares, range of colours">Colours</a></li>
+                        <li><a href="square-deals-contact.html" title="Square Deals, brochure">Brochure</a></li>
+                        <li><a href="square-deals-contact.html" title="Square Deals, Contact Us">Contact us</a></li>
+                        <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                    </ul><br>
+                </nav>
+                <h2>Leaders in the creation of squares</h2>
+                <div id="midpanel">
+                    <div id="midleft"><br>
+                        <ul>
                         <li>A wide range of squares in many colours always in stock</li>
                         <li>Our computerised machines produce squares fast, this ensures prompt delivery at reasonable prices</li>
                         <li>Try our square design service</li>
                     </ul>
-                </div>
-                <div id="midright" class="cntr">
-                    <span class="small"><br></span>
-                    <img alt="Our machines" title="Our machines" height="193" src="images/machines.jpg" width="349">
-                    <div class="cntr">
-                        <span class="tiny">Copyright © Square Deals</span>
                     </div>
+                    <div id="midright" class="cntr">
+                        <span class="small"><br></span>
+                        <img alt="Our machines" title="Our machines" height="193" src="images/machines.jpg" width="349">
+                        <div class="cntr">
+                            <span class="tiny">Copyright © Square Deals</span>
+                        </div>
+                    </div>
+                    <br class="clear"/>
                 </div>
-                <br class="clear"/>
-                </div>
-            </div>
+            </div><!-- end mainpanel-->
             <footer>
                 Footer goes here
             </footer>
