--- a/starter-page.html
+++ b/starter-page.html
@@ -73,9 +73,9 @@
             <div id="rightcol">
                 <nav>
                     <ul>
-                        <li><a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                        <li><a href="maps.html" title="Location Maps">Maps</a></li>
-                        <li><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                        <li><a href="background-ex7-transp.html" title="Accommodation">Accommodation</a></li>
+                        <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
+                        <li><a href="squares-html5.html" title="Frequently Asked Questions">Information</a></li>
                         <li> <a href="attractions.html" title="Local attractions">Attractions</a></li>
                         <li><a href="contact.html" title="Contact us">Contact Us</a></li>
                         <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
