--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,5 +1,5 @@
 <!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
-<!DOCTYPE html>
+<!doctype html>
 <html ng-app lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -16,93 +16,30 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-        <!-- Viewport for responsive web design -->
-	    <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        
-		<script type="text/javascript" src="./js/scripts.js"></script>
-        <script type="text/JavaScript" src="./jQuery.innerfade.js"></script>
-        <script src="./jquery.innerfade.js" type="text/javascript" ></script>
-        <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
-		<link rel="stylesheet" href="./CSS/starter-page-style.css">
-	    <link rel="stylesheet" href="./style.css"> 
-	    <link rel="stylesheet" href="./nav[1].css">
-
-
+		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
+		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		
-		<!--
-		
-		<link rel="stylesheet" href="./CSS/HTML5-style-2.css">
-		
-		
-		<link rel="stylesheet" href="./CSS/nav-style.css">
-		
-		
-		<link rel="stylesheet" href="./CSS/starter-page-style-2.css">
-		
-		<link rel="stylesheet" href="./CSS/gallery-2col.css">
-		<link rel="stylesheet" href="./CSS/gallery-3col-mix.css">
-		<link rel="stylesheet" href="./CSS/gallery-one-col.css">
-		<link rel="stylesheet" href="./CSS/gallery-page-HTML5.css">
-		<link rel="stylesheet" href="./CSS/gallery-ie7.css">
-
-		<link rel="stylesheet" href="./CSS/bullets.css">
-		<link rel="stylesheet" href="./CSS/grad-pic-html5.css">
-		<link rel="stylesheet" href="./CSS/grad-pic-text-HTML5.css">
-		<link rel="stylesheet" href="./CSS/gradient-style-HTML5.css">
-		<link rel="stylesheet" href="./CSS/gradient-style.css">
-		<link rel="stylesheet" href="./CSS/liquid.css">
-		<link rel="stylesheet" href="./CSS/multiple-css2.css">
-		<link rel="stylesheet" href="./CSS/multiple-css3.css">
-		<link rel="stylesheet" href="./CSS/rosette.css">
-		<link rel="stylesheet" href="./CSS/squares-html5.css">
-		<link rel="stylesheet" href="./CSS/transparent.css">
-		<link rel="stylesheet" href="./CSS/gradient-pic.css">
-
-		<link rel="stylesheet" href="./CSS/equal-2d.css">
-		<link rel="stylesheet" href="./CSS/fixed-3d.css">
-		<link rel="stylesheet" href="./CSS/horiz-vert-menu.css">
-		<link rel="stylesheet" href="./CSS/ie-6-style.css">
-		<link rel="stylesheet" href="./CSS/inline-block.css">
-		<link rel="stylesheet" href="./CSS/inset-active.css">
-		<link rel="stylesheet" href="./CSS/main.css">
-		<link rel="stylesheet" href="./CSS/mainstyle.css">
-		<link rel="stylesheet" href="./CSS/nifty-tabs.css">
-		<link rel="stylesheet" href="./CSS/niftyCorners.css">
-		<!-- <link rel="stylesheet" href="./CSS/sliding.css">
---
-		<link rel="stylesheet" href="./CSS/squaretabs.css">
-		<link rel="stylesheet" href="./CSS/style-yosemite-2.css">
-		<link rel="stylesheet" href="./CSS/turquoise.css">
-		<link rel="stylesheet" href="./CSS/variable-2d.css">
-		<link rel="stylesheet" href="./CSS/variable-3d.css">
-
-		<link rel="stylesheet" href="./CSS/position-video.css">
-
-		<link rel="stylesheet" href="./CSS/css3-tabs-ie.css">
-		<link rel="stylesheet" href="./CSS/css3-tabs.css">
-		<link rel="stylesheet" href="./CSS/niftyCorners.css">
-		<link rel="stylesheet" href="./CSS/style-fig3.css">
-		
-		<link rel="stylesheet" href="./CSS/position-video.css">
-		<link rel="stylesheet" href="./CSS/position-video.css">
-		<link rel="stylesheet" href="./CSS/position-video.css">
-		<link rel="stylesheet" href="./CSS/position-video.css">
-
-		-->
-		
-        <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
 	    <link rel="icon" type="image/png" href="./weed.jpg">
 	    <link rel="icon" type="image/png" href="./flexy-logo.png">
-        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
-        <!-- Font Awesome Icons -->
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
+		<!-- Font Awesome Icons -->
         <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
         <!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
         <!-- Plugin CSS -->
@@ -114,24 +51,15 @@
 	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
 	    <link rel="author" type="text/html" href="https://orris0.github.io/">
         <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->                      
 	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src=”js/jquery.mobile-1.0.1.min.js”></script>
-        <script type=”text/javascript” src=”assets/js/ui.js”></script>
-        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
-		<script type="text/javascript" src="js/scripts.js"></script>
-        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <!--Add conditional Javascript-->
         <!--[if lte IE 8]>
-            <script src="js/html5.js" type="text/javascript"></script>
+		    <script src="html5.js"></script>
         <![endif]-->
     </head>
     <body>
