--- a/starter-page.html
+++ b/starter-page.html
@@ -13,21 +13,10 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
+		
 		<link rel="stylesheet" type="text/css" href="CSS/transparent.css">
 		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="js/scripts.js"></script>
-		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
-        <script type=”text/javascript” src=”assets/js/ui.js”></script>
-        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
-        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		
 		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
@@ -54,7 +43,18 @@
         <!-- Core theme CSS (includes Bootstrap)-->                      
 	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <!--Add conditional Javascript-->
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<!--Add conditional Javascript-->
         <!--[if lte IE 8]>
 		    <script src="html5.js"></script>
         <![endif]-->
@@ -64,7 +64,7 @@
             <h1>Tourorris&#39;s Rural Retreats</h1>
             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
         </header>
-        <div id="content">
+        <div class="data" id="content">
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
@@ -174,19 +174,23 @@
                 </div>
             </div>
             
-        <a href="https://orris0.github.io/orris0/index.html"
-            class="back-to-top d-flex align-items-center justify-content-center"><i
-                class="bi bi-arrow-up-short"></i></a>
-        <div id="farewell">Come back and visit us soon!</div>
-        <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
-            <p>&copy; Kite-It.</p>
-        </div>
-		
-        </div><!-- end-container -->
-        </div><!-- end-container -->
-
-        </div><!-- end-container -->
+            <a href="https://orris0.github.io/orris0/index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+            <div id="farewell">Come back and visit us soon!</div>
+            <div class="row" style="background-color: #34495e; border-top: 2px solid #f6931e">
+                <p>&copy; Kite-It.</p>
+            </div>
         </footer>
+		<script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
     </body>
 </html>
 <!--
