--- a/starter-page.html
+++ b/starter-page.html
@@ -78,7 +78,7 @@
                         <li><a href="squares-html5.html" title="Frequently Asked Questions">Information</a></li>
                         <li> <a href="gallery-3col-mix.html" title="Local attractions">Attractions</a></li>
                         <li><a href="gallery-2col.html" title="Contact us">Contact Us</a></li>
-                        <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                        <li><a href="starter-page.html" title="Return to Home Page">Home Page</a></li>
                     </ul> 
                 </nav>
             </div><!--end of side menu column-->
