--- a/starter-page.html
+++ b/starter-page.html
@@ -77,7 +77,7 @@
                         <li><a href="background-ex7-transp.html" title="Location Maps">Maps</a></li>
                         <li><a href="squares-html5.html" title="Frequently Asked Questions">Information</a></li>
                         <li> <a href="tweaked.html" title="Local attractions">Attractions</a></li>
-                        <li><a href="horiz-vert-menu.htm" title="Contact us">Contact Us</a></li>
+                        <li><a href="horiz-vert-menu.html" title="Contact us">Contact Us</a></li>
                         <li><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                     </ul> 
                 </nav>
