--- a/index3.html
+++ b/index3.html
@@ -1,3 +1,136 @@
+<!doctype html>
+<html ng-app lang="en">
+    <head>
+        <title>Contact page for the parish of Southbury, Devon</title>
+        <meta charset="UTF-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
+	    <meta property="og:title" content="A Basic HTML5 Template">
+        <meta property="og:type" content="website">
+        <meta property="og:audio:type" content="audio/mpeg">
+        <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
+        <meta property="og:image" content="image.png">
+        <meta name="keywords" content="HTML5, Node.js, Jquery">
+        <meta name="author" content="Orris Baker">
+	    <meta property="og:audio:type" content="audio/mpeg"> 
+        <link rel="stylesheet" type="text/css" href="horiz-vert-menu.css">
+        <!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+        <link rel="stylesheet" href="./font-awesome.min[1].css">
+	    <link rel="icon" type="image/png" href="./weed.jpg">
+	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+        <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css”>
+		<!-- Font Awesome Icons -->
+        <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
+        <!-- Plugin CSS -->
+        <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+	    <!--Add conditional Javascript-->
+        <!-- Favicon-->	            
+        <link rel="apple-touch-icon" href="./images/apple-touch-icon.png">
+        <link rel="alternate" type="application/pdf" href="MainPage.pdf">
+	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
+	    <link rel="author" type="text/html" href="https://orris0.github.io/">
+        <!-- Bootstrap Icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- SimpleLightbox plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->                      
+	    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+		<script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/scripts.js"></script>
+		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
+        <script type=”text/javascript” src=”assets/js/ui.js”></script>
+        <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
+        <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+		<!--Add conditional Javascript-->
+        <!--[if lte IE 8]>
+		    <script src="html5.js"></script>
+        <![endif]-->
+    </head>
+<body>
+<a id="top"></a>
+<div id="container">
+<header>
+    <h1>THE PARISH OF SOUTHBURY</h1>
+</header>
+<div id="hnav">
+      <ul>
+        <li>
+         <a title="Southbury Church Services" href="southbury-church-services.html">Services</a></li>
+         <li>
+         <a title="What's On" href="southbury-parish-whatson.html">What&#39;s On</a></li>
+         <li>
+         <a title="Contact Us" href="southbury-parish-contact.html">Contact Us</a></li>
+        </ul>
+</div>
+<br class="clear"/><br />
+<div id="main-content"><br />
+<!--side menu column starts-->
+   <nav>
+    <ul>
+    	<li>
+        <a href="southbury-parish-aboutus.html" title="About us">About Us</a></li>
+        <li>
+		<a href="southbury-parish-who.html" title="Who's Who in Southbury Parish">Who&#39;s Who</a></li>
+        <li>
+        <a href="southbury-parish-location.html" title="Location of the parish">Find us</a></li>
+        <li>
+		<a href="southbury-parish-churches.html" title="Description of each church">Churches</a></li>
+        <li>
+        <a href="southbury-parish-activities.html" title="Parish activities and organisations">Activities</a></li>
+        <li>
+        <a href="southbury-parish-faqs.html" title="Frequently Asked Questions (Baptisms, Funerals, Weddings)">
+		FAQs</a></li>
+        <li>
+        <a href="index.html" title="Return to Home Page">Home Page</a></li>
+      </ul>
+    </nav><!--end of side menu column-->
+  <!--start of far right column-->
+ <div id="creditcol"><br />
+       <img alt="Church logo" title="Church logo" src="images/churchlogo.jpg">
+ 		<p><a href="http://validator.w3.org/check?uri=referer">
+<!--<img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">--></a>
+<img src="../../Apress%20Images%20for%20docs/Ch04%20Rollover%20Navigation%20Menus/images%20for%20docs/HTML5_Logo_64.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5">
+        <span class="tiny"><br>Validated by the World Wide Web Consortium</span>
+        </p>
+		<p><span class="tiny">Website design and production by<br />
+	    A West Web Design</span>
+	    </p>
+</div>
+<div id="midcontent">
+     <h2>CONTACT US</h2><br />
+<div id="mid-left-col">   
+	 	 <h2>Contact James Miller</h2>Vice Chairman of the Parochial Church Council<br />
+	 	 Tel: 01234 333 555<br /><br />
+	 	 <h2>Church Office Postal Address:</h2>Church Office, Southbury Parish<br />
+		 Sunday School Building, The Churchyard<br />Church Lane, Southbury, SX24 6JM
+</div>
+<div id="mid-right-col">
+<img class="cntr" title="Southbury Church" alt="Southbury Church" height="172" src="images/southbury220.jpg" width="220" />
+</div>
+</div>
+</div>
+<br class="clear" />    
+<footer>
+        Footer goes here
+</footer>
+</div>
+</body>
+</html>
+
+<!--
+
 <!DOCTYPE html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
