--- a/starter-page.html
+++ b/starter-page.html
@@ -58,7 +58,7 @@
     <!--[if lte IE 8]>
 		    <script src="html5.js"></script>
         <![endif]-->
-    </head>
+    </head>1
     <body>
         <header>
             <h1>Tourorris&#39;s Rural Retreats</h1>
