--- a/index3.html
+++ b/index3.html
@@ -62,7 +62,7 @@
 <a id="top"></a>
 <div id="container">
 <header>
-    <h1>THE PARISH OF SOUTHBURY</h1>
+    <h1>THE PARISH OF ST.DAVIDS</h1>
 </header>
 <div id="hnav">
       <ul>
@@ -122,11 +122,75 @@
 </div>
 </div>
 <br class="clear" />    
-<footer>
-        Footer goes here
-</footer>
-</div>
-</body>
+<!-- Footer -->
+            <footer class="w3-light-grey">
+                <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by <a href="https://orris0.github.io/orris0/index.html/">Practical HTML5 Projects.</a>
+                    Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> For Fun and Profit.... Come back and visit us soon</a>
+                    <!-- Optional JavaScript --
+                    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+                    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+                
+                    <script>
+                        // Toggle between hiding and showing blog replies/comments
+                        document.getElementById("myBtn").click();
+                        function myFunction(id) {
+                        var x = document.getElementById(id);
+                        if (x.className.indexOf("w3-show") == -1) {
+                        x.className += " w3-show";
+                        } else { 
+                        x.className = x.className.replace(" w3-show", "");
+                        }
+                      }
+                      function likeFunction(x) {
+                      x.style.fontWeight = "bold";
+                      x.innerHTML = "&#10003; Liked";
+                      }
+                </script>	                                  
+                <script type="text/javascript" src="jquery-1.7-min.js"></script>
+                <script type="text/javascript" src="script.js"></script>
+            </div>
+        </footer>
+        <!-- Code injected by live-server -->
+<script>
+	// <![CDATA[  <-- For SVG support
+	if ('WebSocket' in window) {
+		(function () {
+			function refreshCSS() {
+				var sheets = [].slice.call(document.getElementsByTagName("link"));
+				var head = document.getElementsByTagName("head")[0];
+				for (var i = 0; i < sheets.length; ++i) {
+					var elem = sheets[i];
+					var parent = elem.parentElement || head;
+					parent.removeChild(elem);
+					var rel = elem.rel;
+					if (elem.href && typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+						var url = elem.href.replace(/(&|\?)_cacheOverride=\d+/, '');
+						elem.href = url + (url.indexOf('?') >= 0 ? '&' : '?') + '_cacheOverride=' + (new Date().valueOf());
+					}
+					parent.appendChild(elem);
+				}
+			}
+			var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+			var address = protocol + window.location.host + window.location.pathname + '/ws';
+			var socket = new WebSocket(address);
+			socket.onmessage = function (msg) {
+				if (msg.data == 'reload') window.location.reload();
+				else if (msg.data == 'refreshcss') refreshCSS();
+			};
+			if (sessionStorage && !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+				console.log('Live reload enabled.');
+				sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+			}
+		})();
+	}
+	else {
+		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+	}
+	// ]]>
+</script>
+    </body>
 </html>
 
 <!--
@@ -134,20 +198,20 @@
 <!DOCTYPE html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!-- Anything you write under head is not displayed on the browser content page. --
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
 	<!-- All the Tags should be under <html> -->
-	<!-- Describing about the page -->
+	<!-- Describing about the page --
 	<head>
 		<!-- Required meta tags -->
 	    <!-- Describing about the page -->
 	    <!-- head section is communicating about the page to the browser -->
-		<!-- Anything you write under head is not displayed on the browser content page. -->
+		<!-- Anything you write under head is not displayed on the browser content page. --
 		<meta charset="UTF-8">
         <title>Integrating Innovation-3</title>
         <script type="text/javascript" src="jquery-1.7-min.js"></script>
         <script type="text/javascript" src="script.js"></script>
-        <!-- Required meta tags -->
+        <!-- Required meta tags --
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Orris Baker Jr">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -160,17 +224,17 @@
         <!--Add conditional Javascript-->
         <!--[if lte IE 8]>
         <script src="html5.js" type="text/javascript"></script>
-        <![endif]-->
+        <![endif]--
     </head>
 
     <body class="w3-light-grey">
-    <!-- HEADER -->
+    <!-- HEADER --
 
     <div class="wrapper">
         <div id="container">
             <header id="main-header">                    
                         <!-- w3-content defines a container for fixed size centered content, 
-                        and is wrapped around the whole page content, except for the footer in this example -->       
+                        and is wrapped around the whole page content, except for the footer in this example --      
                 <div class="w3-light-grey">          
                     <div id="banner"> 
                         <h1>MJ's Simplistic HTML5 Templates</h1>
@@ -189,7 +253,7 @@
                     </div>
                 </div>	            
             </header>		
-            <!-- MENU -->
+            <!-- MENU --
             <div class="row">
                 <div class="col-xs-12 col-sm-10 col-md-10 c0l-lg-10"> 		    	
                     <div class="menu-bar">                               
@@ -286,11 +350,11 @@
                         <a href="page16.html">Page 7</a>
                         <a href="page17.html">Page 8</a>
                     </p>
-                </div><!--gallery block closed-->
+                </div><!--gallery block closed--
         
-            </div><!--midcol closed-->
+            </div><!--midcol closed--
             <!-- Optional JavaScript -->
-            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS --
             <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -332,7 +396,7 @@
             <footer class="w3-light-grey">
                 <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by <a href="https://orris0.github.io/orris0/index.html/">Practical HTML5 Projects.</a>
                     Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> For Fun and Profit.... Come back and visit us soon</a>
-                    <!-- Optional JavaScript -->
+                    <!-- Optional JavaScript --
                     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
