--- a/index3.html
+++ b/index3.html
@@ -219,7 +219,7 @@
         <style>
             body {background: linear-gradient(#fb3 50%, #58a 50%);}
         </style>
-        <!-- Bootstrap CSS -->
+        <!-- Bootstrap CSS --
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">       
         <!--Add conditional Javascript-->
         <!--[if lte IE 8]>
