--- a/index3.html
+++ b/index3.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html ng-app lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
     <head>
         <title>Contact page for the parish of Southbury, Devon</title>
+		<script type="text/javascript" src="jquery-1.7-min.js"></script>
+        <script type="text/javascript" src="script.js"></script>
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -105,7 +107,7 @@
         <span class="tiny"><br>Validated by the World Wide Web Consortium</span>
         </p>
 		<p><span class="tiny">Website design and production by<br />
-	    A West Web Design</span>
+	    O Baker Web Design</span>
 	    </p>
 </div>
 <div id="midcontent">
@@ -124,8 +126,8 @@
 <br class="clear" />    
 <!-- Footer -->
             <footer class="w3-light-grey">
-                <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by <a href="https://orris0.github.io/orris0/index.html/">Practical HTML5 Projects.</a>
-                    Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> For Fun and Profit.... Come back and visit us soon</a>
+                <div id="farewell"&nbsp; Copyright (c) All rights reserved. Designed by O Baker Web Design
+                    Powered<a href="https://orris0.github.io/orris0/index.html" target="_blank"> Practical HTML5 Projects For Fun and Profit.... Come back and visit us soon</a>
                     <!-- Optional JavaScript --
                     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
                     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
