--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -9,7 +9,7 @@ validated.html)
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Complete Gallery page</title>
         <meta charset=utf-8>
-        <link rel = "stylesheet" type = "text/css" href = "gallery-page-HTML5.css">
+        <link rel = "stylesheet" type = "text/css" href = "gallery-one-col.css">
         <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -359,19 +359,19 @@ validated.html)
 <!DOCTYPE html>
 <!--Everything you write should be using markups -->
 <!-- head section is communicating about the page to the browser -->
-<!-- Anything you write under head is not displayed on the browser content page. -->
+<!-- Anything you write under head is not displayed on the browser content page. --
 <html xmlns="http://www.w3.org/1999/xhtml" xml:ng-app lang="en">
 	<!-- All the Tags should be under <html> -->
-	<!-- Describing about the page -->
+	<!-- Describing about the page --
 	<head>
 		<!-- Required meta tags -->
 	    <!-- Describing about the page -->
 	    <!-- head section is communicating about the page to the browser -->
-		<!-- Anything you write under head is not displayed on the browser content page. -->
+		<!-- Anything you write under head is not displayed on the browser content page. --
 		<meta charset="UTF-8">
 <title>Rollover Gallery, one column</title>
 
-		<!-- Viewport for responsive web design -->
+		<!-- Viewport for responsive web design --
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
         <meta property="og:title" content="A Basic HTML5 Template">
@@ -382,7 +382,7 @@ validated.html)
         <meta name="author" content="Orris Baker">
 		
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
-		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
+		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> --
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
