--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -22,7 +22,7 @@ validated.html)
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
 		<link rel="stylesheet" type="text/css" href="CSS/HTML5-style-2.css">
-		<!-- <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> -->
+		<link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8"> 
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
 		<script src=”js/jquery.mobile-1.0.1.min.js”></script>
