--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -9,7 +9,7 @@ validated.html)
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>Complete Gallery page</title>
         <meta charset=utf-8>
-        <link rel="stylesheet" type="text/css" href="gallery-one-col.css">
+        <link rel="stylesheet" type="text/css" href="CSS/gallery-2col.css"> 
         <meta name="description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 		<meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
 		<meta name="google-adsense-account" content="ca-pub-9639638377144073">
