--- a/starter-page.html
+++ b/starter-page.html
@@ -26,8 +26,8 @@
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 		<script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		
 		<link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
@@ -196,6 +196,32 @@
 
         </div><!-- end-container -->
     </footer>
+     <script src="lib/jquery-1.8.17.custom.min.js" type="text/javascript"></script>
+
+    <!-- Vendor JS Files -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="../orris0/aos.css"></script>
+    <script src="../orris0/bootstrap.bundle.min.js"></script>
+    <script src="../orris0/glightbox.min.js"></script>
+    <script src="../orris0/isotope.pkgd.min.js"></script>
+    <script src="../orris0/swiper-bundle.min.js"></script>
+    <script src="../orris0/validate.js"></script>
+    <!--jQuery JS-->
+    <link rel="stylesheet" href="./CSS/base.css" type="text/css" media="screen" charset="utf-8" />
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/scripts.js"></script>
+    <script src="jquery.innerfade.js" type="text/javascript"></script>
+    <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="jquery.Jcrop.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+    <script src="jquery.innerfade.js" type="text/javascript"></script>
+    <script src="jquery.cycle.all.min.js" type="text/javascript"></script>
+    <!-- Template Main JS File -->
+    <script src="../orris0/main.js"></script>
     </body>
 </html>
 <!--
