--- a/starter-page.html
+++ b/starter-page.html
@@ -68,7 +68,7 @@
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div id="leftcol">
                 <h3>Cottages, converted barns, caravans</h3>
-                <img alt="cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
+                <img alt="cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
             </div>
             <div id="rightcol">
             <nav>
@@ -76,7 +76,7 @@
                     <li><a href="HTML5-Ch1-7.html" title="Accommodation">Accommodation</a></li>
                     <li><a href="starter-page.html" title="Location Maps">Maps</a></li>
                     <li><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                    <li> <a href="attractions.html" title="Local attractions">Attractions</a></li>
+                    <li><a href="attractions.html" title="Local attractions">Attractions</a></li>
                     <li><a href="contact.html" title="Contact us">Contact Us</a></li>
                     <li><a href="index.html" title="Return to Home Page">Home Page</a></li>
                 </ul> 
