--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <div class="row">
                     <div class="col-12">   
 						<header>
-                            <h1>Devon&#39;s Rural Retreats</h1>
+                            <h1>Tourorris&#39;s Rural Retreats</h1>
                             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
                         </header>
                         <!-- <div id="content"> -->
