--- a/index[1].html
+++ b/index[1].html
@@ -45,7 +45,7 @@
             }
             header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
             }
-            nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+            nav { background-color: #FF9966; margin-bottom:10px;
             }
             article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
             }
