--- a/index[1].html
+++ b/index[1].html
@@ -147,6 +147,22 @@
              <div id="red" class="box">Go!</div>
         </div>
 		<div id="container">
+            <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row --
             <img class="logo" src="./img/flexy-logo.png">
             <!-- <div id="header">
                 <!-- <h1>StarTrackr!</h1> -->
