--- a/news.html
+++ b/news.html
@@ -67,6 +67,54 @@
             <![endif]-->
     </head>
 	<body>
+		<div id="container">
+        <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
+
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+
+			<br class="clear">
+			
+            <div class="row">
+                <div class="çol-12" padding="2%">
+                    <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+                </div><!-- end-col-12 -->
+            </div><!-- end-row -->
+			
+            <br class="clear">
+			
+            <div class="data" id="#html5style2content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="img/kite.png">
+                        <p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                            kind of like people so their privacy should be respected.
+                        </p>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				
+				<br class="clear">
 		<!--
         <div class="container">
 			<img class="logo" src="./img/flexy-logo.png">
@@ -107,7 +155,7 @@
 	            <div class="data" id="#html5-style-2content">
                    <!-- <h2>Get ready for take off.</h2> --
                     <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
-						-->
+						--
 		<div>
              <div id="green" class="box">Go!</div>
              <div id="red" class="box">Go!</div>
@@ -115,11 +163,11 @@
 		<div id="container">
             <img class="logo" src="./img/flexy-logo.png">
             <!-- <div id="header">
-                <!-- <h1>StarTrackr!</h1> -->
+                <!-- <h1>StarTrackr!</h1> --
                 <div class="row">
                     <div class="col-12">
 				        <header data-role="header" class="data" id="html5-ch1-7header">
-                                <!-- <div id="hdr"> changed to <header> -->
+                                <!-- <div id="hdr"> changed to <header> --
                                 <hgroup>
                                     <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit</h1>
                                     <h2 class="heading"><strong>StarTrackr!</strong></h2>
@@ -128,8 +176,8 @@
                                     <br>Orris
                                 </p>
                             </header>
-					</div><!-- end-col-12 -->
-                </div><!-- end-row -->
+					</div><!-- end-col-12 --
+                </div><!-- end-row --
             
             <div class="row">
                 <div class="col-12">
@@ -144,10 +192,10 @@
                             <li><a href="./starter-page.html">Specials</a></li>
 					        <li><a href="./index[1].html">Blog</a></li>
 					        <li><a href="./index2.html">Products</a></li>
-							<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> -->
+							<!-- <li><a href="./creating-a-website.html">Create-a-website</a></li> --
                         </ul>
                     </nav>
-				</div><!-- end-col-12 -->
+				</div><!-- end-col-12 --
             </div><!-- end-row -->
             <div id="content">
                 <h2>Welcome!</h2>
