--- a/starter-page.html
+++ b/starter-page.html
@@ -58,8 +58,57 @@
     <!--[if lte IE 8]>
 		    <script src="html5.js"></script>
         <![endif]-->
-    </head>1
-    <body>
+    </head>
+    <body
+		<div id="container">
+        <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row --
+
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> --
+                <h1 id="html5style2h1">StarTrackr!</h1>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 --
+            </header>
+
+			<br class="clear">
+			
+            <div class="row">
+                <div class="çol-12" padding="2%">
+                    <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+                </div><!-- end-col-12 --
+            </div><!-- end-row --
+			
+            <br class="clear">
+			
+            <div class="data" id="#html5style2content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="img/kite.png">
+                        <p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                            kind of like people so their privacy should be respected.
+                        </p>
+                    </div><!-- end-col-12 --
+                </div><!-- end-row --
+				
+				<br class="clear">
+		-->
         <header>
             <h1>Tourorris&#39;s Rural Retreats</h1>
             <img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
