--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -283,16 +283,64 @@ validated.html)
         <![endif]-->
 </head>
     <body>
+		<div id="container">
+        <div class="row">
+            <div class="col-12">
+                <nav role="navigation" id="nav">
+                    <input class="trigger" type="checkbox" id="mainNavButton">
+                    <label for="mainNavButton" onclick>Menu</label>
+                    <ul>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./index[1].html">About Us</a></li>
+                        <li><a href="./membership.html">Products</a></li>
+                        <li><a href="./news.html">Blog</a></li>
+                        <li><a href="./starter-page.html">Specials</a></li>
+                        <li><a href="./welcome.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div><!-- col-12 -->
+        </div><!-- end-.row -->
+
+        <div class="wrapper">
+            <header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+                <h1>A full page roll-over gallery of greetings cards</h1>
+            <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+                <div class="col-12">
+                    <img class="logo" src="img/flexy-logo.png">
+                </div><!-- end-col-12 -->
+            </header>
+
+			<br class="clear">
+			
+            <div class="row">
+                <div class="çol-12" padding="2%">
+                    <h2 class="dark">Practical HTML5 Projects for fun and Profit!</h2>
+                </div><!-- end-col-12 -->
+            </div><!-- end-row -->
+			
+            <br class="clear">
+			
+            <div class="data" id="#html5style2content">
+                <div class="row">
+                    <div class="col-12">
+                        <img src="img/kite.png">
+                        <p id="disclaimer">
+                            Disclaimer! This service is not intended for the those with criminal intent. Celebrities are
+                            kind of like people so their privacy should be respected.
+                        </p>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row --
         <header>
             <h1>A full page roll-over gallery of greetings cards</h1>
             <h2>Hover the mouse over a small picture to see an enlarged version</h2>
         </header>
+				-->
         <nav>
             <ul>
                 <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
                 <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
                 <li class="btn"><a href="gallery-3col-mix.html">Page Four</a></li>
-                <li class="btn"><a href="gallery-page- validated.html>Home Page</a></li>
+                <li class="btn"><a href="gallery-page-validated.html>Home Page</a></li>
             </ul>
         </nav>
         <div id="rightcol">
