--- a/gallery-2col.html
+++ b/gallery-2col.html
@@ -103,12 +103,12 @@
                     <input class="trigger" type="checkbox" id="mainNavButton">
                     <label for="mainNavButton" onclick>Menu</label>
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./index[1].html">About Us</a></li>
-                        <li><a href="./membership.html">Products</a></li>
-                        <li><a href="./news.html">Blog</a></li>
-                        <li><a href="./starter-page.html">Specials</a></li>
-                        <li><a href="./welcome.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index[1].html">About Us</a></li>
+                        <li><a href="membership.html">Products</a></li>
+                        <li><a href="news.html">Blog</a></li>
+                        <li><a href="starter-page.html">Specials</a></li>
+                        <li><a href="index3.html">Contact</a></li>
                     </ul>
                 </nav>
             </div><!-- col-12 -->
