--- a/gallery-one-col.html
+++ b/gallery-one-col.html
@@ -356,6 +356,11 @@ validated.html)
             <p class="advert">Web Design by Orris Baker</p>
 		</div>
         <div id="midcol">
+			<ul id = "col-1"><li><a href="#"><img src ="images/alithumb.jpg" alt="Ali" title="Ali"> <img class = "hid" src ="images/alibig.jpg" alt=" "></a></li>
+                <li><a href="#"><img src ="images/catthumb.jpg" title="Cat" alt="Cat"> <img class = "hid" src ="images/catbig.jpg" alt=" "></a></li>
+                <li><a href="#"><img src ="images/beachthumb.jpg" title="Beach" alt="Beach"> <img class = "hid" src ="images/beachbig.jpg" alt=" "></a></li>
+            </ul>
+			<!--
             <div id="gallery-block">
                 <ul id = "col-1">
                     <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
