--- a/gallery-page-validated.html
+++ b/gallery-page-validated.html
@@ -366,10 +366,10 @@
           </header>
           <nav class="data" id="gallerypagenav">
             <ul>
-              <li class="btn"><a href="#">Page Two</a></li>
-              <li class="btn"><a href="#">Page Three</a></li>
-              <li class="btn"><a href="#">Page Four</a></li>
-              <li class="btn"><a href="#">Home Page</a></li>
+              <li class="btn"><a href="gallery-one-col.html">Page Two</a></li>
+              <li class="btn"><a href="gallery-2col.html">Page Three</a></li>
+              <li class="btn"><a href="gallery-3col-mix.html">Page Four</a></li>
+              <li class="btn"><a href="gallery-page-validated.html">Home Page</a></li>
             </ul>
           </nav>
           <br class="clear">
