--- a/about.html
+++ b/about.html
@@ -604,7 +604,7 @@
                             </div>
                         </div><!-- end-col-8 -->
                     </div><!-- end-.row -->
-                    </div><!-- end #html5-style-2content --> 
+                     
                     <br class="clear">
                     <div class="row" style="background-color: #00afe1;">
                         <div class="col-7">
@@ -632,7 +632,7 @@
                         </div><!-- end-col-12 -->
                     </div><!-- end-.row -->
                     <br class="clear">
-    </div><!-- end container -->
+    
 		
                             <!--
                         <h3>Around town last night</h3>
@@ -784,7 +784,7 @@
                             </nav>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
-</div><!-- end container -->
+
                     <div class="row">
                         <div class="col-12">
                             <header data-role="header" class="data" id="html5-ch1-7header">
@@ -815,7 +815,7 @@
                             </div>
                         </div><!-- end-col-12 -->
                     </div><!-- end-row -->
-
+</div><!-- end container -->
                             <p id="no-script">We recommend that you have JavaScript enabled!</p>
                         </b>
                         <p><img title="Koala" alt="Koala" height="165" src="images/Koalasmall.jpg" width="220"></p>
@@ -973,23 +973,23 @@
                                             </p>
                                         </div>
 
-                                        <!-- <div class="data" id="html5-ch1-7leftcol">
+                                        <div class="data" id="html5-ch1-7leftcol">
                                 <h3>Cottages, converted barns, caravans</h3>
                                 <img alt="Cottage interior" title="Cottage interior" height="225" src="./bda-11.jpg" width="300">
                                 <br>The superb interior of one of our cottages
                             </div>
 
-                            <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>--
-                                <ul><!--start of menu list--
+                            <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
+                                <ul><!--start of menu list-->
                                     <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                     <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
                                     <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
                                     <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
                                     <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                                </ul><!--end of menu list--
+                                </ul><!--end of menu list-->
                             </nav>
 
-                            <!--</div> removed and replaced with </nav>--
+                            <!--</div> removed and replaced with </nav>-->
                             <div class="data" id="html5-ch1-7midcol">
                                 <h3>Situated in the BDA's beautiful countryside</h3>
                                 <img title="Devon countryside" alt="Devon countryside" src="images/./bda-12.jpg" height="229" width="398">
