--- a/about.html
+++ b/about.html
@@ -656,7 +656,7 @@
                                 <img id="globe" class="circle" src="images/globe.png" width="215px">
                             </div>
                         </div>
-                    </div>
+                    
                     <div class="row" style="background-color: #00AFE1;">
                         <div class="col-12">
                             <img id="plane-background" src="./img/plane-background.png" width="935px">
@@ -1606,9 +1606,9 @@
                     </p>
                 </header>
             </div><!-- end-col-12 -->
-        </div><!-- end-row -->
+        </div><!-- end-row --
 
-        <div class="data" id="#html5style2content">
+        <div class="data" id="#html5style2content"> -->
             <h2>Award winning accommodation, self catering or bed and breakfast</h2>
             <div class="row" style="background-color: #3C8886; padding: 5% 0 3%;">
                 <div class="çol-12">
